# fedocal-messages

./: README.md  setup.cfg  tox.ini
fedocal_messages/: __init__.py  base.py  messages.py
fedocal_messages/tests/: test_calendar_clear.py  test_calendar_delete.py  test_calendar_new.py  test_calendar_update.py  test_calendar_upload.py  test_common.py  test_meeting_delete.py  test_meeting_new.py  test_meeting_update.py  test_object_from_topic.py  test_reminder.py  utils.py
