[metadata]
name = fedocal-messages
version = 1.5.0
description = A schema package for messages sent by fedocal
long_description = file: README.md
url = https://pagure.io/fedocal
maintainer = Fedora Infrastructure Team
maintainer_email = infrastructure@lists.fedoraproject.org
keywords = fedora
platforms = Fedora, GNU/Linux
license = GPLv2+
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  fedora_messaging
  python-dateutil


[options.entry_points]
fedora.messages =
    fedocal.calendar.new=fedocal_messages.messages:CalendarNewV1
    fedocal.calendar.update=fedocal_messages.messages:CalendarUpdateV1
    fedocal.calendar.upload=fedocal_messages.messages:CalendarUploadV1
    fedocal.calendar.delete=fedocal_messages.messages:CalendarDeleteV1
    fedocal.calendar.clear=fedocal_messages.messages:CalendarClearV1
    fedocal.meeting.delete=fedocal_messages.messages:MeetingDeleteV1
    fedocal.meeting.new=fedocal_messages.messages:MeetingNewV1
    fedocal.meeting.reminder=fedocal_messages.messages:ReminderV1
    fedocal.meeting.update=fedocal_messages.messages:MeetingUpdateV1


[bdist_wheel]
universal = 1

[flake8]
show-source = True
max-line-length = 100
exclude = .git,.tox,dist,*egg,build,venv,.venv
ignore = E203,W503

[tool:pytest]
testpaths = fedocal_messages/tests/

[coverage:run]
branch = True
source = fedocal_messages

[coverage:paths]
source =
   fedocal_messages
   .tox/*/site-packages/fedocal_messages

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
omit =
    fedocal_messages/tests/*
